tests/machine/x/c/string_concat.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

int main() {
    printf("%d\n", ("hello " + "world"));
    return 0;
}
